<resources>
    <string name="app_name">quanlichitieu</string>
    <string name="downloaded">Downloaded</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="log_out">Log out</string>
    <string name="_welcome">Welcome 👋</string>
    <string name="register_now_to_experience_the_course">Register now to experience the course</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account"><font color="#252525">Already have an account? </font></string>
    <string name="sign_in_to_experience_the_course">Sign in to experience the course</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">No account?</string>
    <string name="_forgot_password_fragment">Forgot password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="send">Send</string>
    <string name="otp">OTP</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="change_password">Change password</string>
    <string name="user_name">User Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="accept">Accept</string>
</resources>