<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/_forgot_password_fragment"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ic_back" />

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_back"
        android:padding="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctn_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ic_back"
        app:layout_constraintTop_toBottomOf="@+id/ic_back">

        <EditText
            android:id="@+id/input_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_edt"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/email"
            android:paddingLeft="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_lock"
            app:layout_constraintBottom_toBottomOf="@id/input_Email"
            app:layout_constraintLeft_toLeftOf="@id/input_Email"
            app:layout_constraintTop_toTopOf="@id/input_Email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctn_OTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/ctn_Email"
        app:layout_constraintStart_toStartOf="@+id/ctn_Email"
        app:layout_constraintTop_toBottomOf="@+id/ctn_Email">

        <EditText
            android:id="@+id/input_OTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_edt"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/otp"
            android:inputType="number"
            android:gravity="center"
            android:textStyle="bold"
            android:maxLength="6"
            android:paddingHorizontal="@dimen/_35sdp"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctn_Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/ctn_OTP"
        app:layout_constraintStart_toStartOf="@+id/ctn_OTP"
        app:layout_constraintTop_toBottomOf="@+id/ctn_OTP">

        <EditText
            android:id="@+id/input_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_edt"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_35sdp"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_lock"
            app:layout_constraintBottom_toBottomOf="@id/input_Pass"
            app:layout_constraintLeft_toLeftOf="@id/input_Pass"
            app:layout_constraintTop_toTopOf="@id/input_Pass" />

        <ImageView
            android:id="@+id/ic_eye_off_new_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:src="@drawable/ic_eye_off"
            app:layout_constraintBottom_toBottomOf="@+id/input_Pass"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/input_Pass" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctn_EnterPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:visibility="gone"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/ctn_Pass"
        app:layout_constraintStart_toStartOf="@+id/ctn_Pass"
        app:layout_constraintTop_toBottomOf="@+id/ctn_Pass">

        <EditText
            android:id="@+id/input_EnterPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_edt"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/enter_a_new_password"
            android:paddingHorizontal="@dimen/_35sdp"
            android:inputType="textPassword"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_lock"
            app:layout_constraintBottom_toBottomOf="@id/input_EnterPass"
            app:layout_constraintLeft_toLeftOf="@id/input_EnterPass"
            app:layout_constraintTop_toTopOf="@id/input_EnterPass" />

        <ImageView
            android:id="@+id/ic_eye_off_Enter_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:src="@drawable/ic_eye_off"
            app:layout_constraintBottom_toBottomOf="@+id/input_EnterPass"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/input_EnterPass" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
    android:id="@+id/btn_send_Email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_12sdp"
    android:layout_marginTop="@dimen/_18ssp"
    android:background="@drawable/bg_btn_sign"
    android:fontFamily="@font/inter_bold"
    android:gravity="center"
    android:text="@string/send"
    android:textColor="@color/white"
    android:textSize="@dimen/_14ssp"
    app:layout_constraintTop_toBottomOf="@id/ctn_EnterPass" />

    <TextView
        android:id="@+id/btnCheckOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_18ssp"
        android:background="@drawable/bg_btn_sign"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/accept"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/ctn_EnterPass" />

</androidx.constraintlayout.widget.ConstraintLayout>